[tool.poetry]
name = "benchmarking-postgres"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg-pool = "^3.2.1"
psycopg = {extras = ["binary"], version = "^3.1.17"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
